[modify] css - a태그 관련 수정중

--- a/study_code/a_project/html/main_v1.html
+++ b/study_code/a_project/html/main_v1.html
@@ -14,9 +14,9 @@
   <!-- css -->
   <link rel="stylesheet" href="../css/common/reset.css">
   <link rel="stylesheet" href="../css/common/common.css">
-  <!-- <link rel="stylesheet" href="../css/common/component.css"> -->
+  <link rel="stylesheet" href="../css/common/component.css">
   <link rel="stylesheet" href="../css/src/main_v1.css">
-  <link rel="stylesheet" href="../css/src/main_v2.css">
+  <!-- <link rel="stylesheet" href="../css/src/main_v2.css"> -->
 
   <!-- js -->
   <script src="../js/common/modernizr-custom.js"></script>
@@ -87,24 +87,24 @@
       <h2 class="blind">메인 광고</h2>
       <div class="view_area">
         <div class="view_btn">
-          <div class="view_after_btn"><button type="button">다음내용보기</button></div>
+          <div class="view_after_btn"><button type="button"></button></div>
           <div class="view_before_btn"><button type="button">이전내용보기</button></div>
         </div>
         <div class="view">
           <div class="view_in_wrap">
-            <div class="view_content view_content_01">01</div>
-            <div class="view_content view_content_02">02</div>
-            <div class="view_content view_content_03">03</div>
-            <div class="view_content view_content_04">04</div>
-            <div class="view_content view_content_05">05</div>
+              <div class="view_content view_content_01"><a href="#">01</a></div>
+              <div class="view_content view_content_02"><a href="#">02</a></div>
+              <div class="view_content view_content_03"><a href="#">03</a></div>
+              <div class="view_content view_content_04"><a href="#">04</a></div>
+              <div class="view_content view_content_05"><a href="#">05</a></div>
           </div>
         </div>
         <div class="view_num">1/5</div>
       </div>
       <ul class="side_view_area">
-        <li class="side_view"></li>
-        <li class="side_view"></li>
-        <li class="side_view"></li>
+        <li class="side_view"><a href="#"></a></li>
+        <li class="side_view"><a href="#"></a></li>
+        <li class="side_view"><a href="#"></a></li>
       </ul>
 
     </section> <!-- // #viewBox-->
@@ -121,28 +121,34 @@
       </div>
       <ul class="best_area">
         <li class="best_item">
-          <div class="best_img"></div>
-          <dl class="best_text">
-            <dt class="text_title">Lorem.</dt>
-            <dd class="text_price">Lorem, ipsum.</dd>
-            <dd class="text_detail">Lorem ipsum dolor sit amet.</dd>
-          </dl>
+          <a href="#">
+            <div class="best_img"></div>
+            <dl class="best_text">
+              <dt class="text_title">Lorem.</dt>
+              <dd class="text_price">Lorem, ipsum.</dd>
+              <dd class="text_detail">Lorem ipsum dolor sit amet.</dd>
+            </dl>
+          </a>
         </li>
         <li class="best_item">
-          <div class="best_img"></div>
-          <dl class="best_text">
-            <dt class="text_title">Lorem.</dt>
-            <dd class="text_price">Lorem, ipsum.</dd>
-            <dd class="text_detail">Lorem ipsum dolor sit amet.</dd>
-          </dl>
+          <a href="#">
+            <div class="best_img"></div>
+            <dl class="best_text">
+              <dt class="text_title">Lorem.</dt>
+              <dd class="text_price">Lorem, ipsum.</dd>
+              <dd class="text_detail">Lorem ipsum dolor sit amet.</dd>
+            </dl>
+          </a>
         </li>
         <li class="best_item">
-          <div class="best_img"></div>
-          <dl class="best_text">
-            <dt class="text_title">Lorem.</dt>
-            <dd class="text_price">Lorem, ipsum.</dd>
-            <dd class="text_detail">Lorem ipsum dolor sit amet.</dd>
-          </dl>
+          <a href="#">
+            <div class="best_img"></div>
+            <dl class="best_text">
+              <dt class="text_title">Lorem.</dt>
+              <dd class="text_price">Lorem, ipsum.</dd>
+              <dd class="text_detail">Lorem ipsum dolor sit amet.</dd>
+            </dl>
+          </a>
         </li>
       </ul>
 
@@ -205,8 +211,8 @@
         </div>
       </div>
       <ul class="challenge_area">
-        <li class="challenge"></li>
-        <li class="challenge"></li>
+        <li class="challenge"><a href="#"></a></li>
+        <li class="challenge"><a href="#"></a></li>
       </ul>
 
     </article> <!-- // #challengeBox-->
@@ -222,27 +228,33 @@
       </div>
       <ul class="event_area">
         <li class="event">
-          <div class="event_img"></div>
-          <dl class="event_text">
-            <dt class="event_title">Lorem.</dt>
-            <dd class="event_detial">Lorem ipsum dolor sit.</dd>
-          </dl>
+          <a href="#">
+            <div class="event_img"></div>
+            <dl class="event_text">
+              <dt class="event_title">Lorem.</dt>
+              <dd class="event_detial">Lorem ipsum dolor sit.</dd>
+            </dl>
+          </a>
         </li>
 
         <li class="event">
-          <div class="event_img"></div>
-          <dl class="event_text">
-            <dt class="event_title">Lorem.</dt>
-            <dd class="event_detial">Lorem ipsum dolor sit.</dd>
-          </dl>
+          <a href="#">
+            <div class="event_img"></div>
+            <dl class="event_text">
+              <dt class="event_title">Lorem.</dt>
+              <dd class="event_detial">Lorem ipsum dolor sit.</dd>
+            </dl>
+          </a>
         </li>
 
         <li class="event">
-          <div class="event_img"></div>
-          <dl class="event_text">
-            <dt class="event_title">Lorem.</dt>
-            <dd class="event_detial">Lorem ipsum dolor sit.</dd>
-          </dl>
+          <a href="#">
+            <div class="event_img"></div>
+            <dl class="event_text">
+              <dt class="event_title">Lorem.</dt>
+              <dd class="event_detial">Lorem ipsum dolor sit.</dd>
+            </dl>
+          </a>
         </li>
       </ul>
 
@@ -291,68 +303,78 @@
       </div>
       <div class="sale_area">
         <div class="sale_item">
-          <div class="sale_img"></div>
-          <ul class="sale_text">
-            <li class="sale_title">Lorem, ipsum dolor.</li>
-            <li class="sale_last_price">Lorem, ipsum dolor.</li>
-            <li class="sale_price_area clearfix">
-              <div class="sale_percent">per</div>
-              <div class="sale_price">price</div>
-            </li>
-            <li class="sale_detial">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-          </ul>
+          <a href="#">
+            <div class="sale_img"></div>
+            <ul class="sale_text">
+              <li class="sale_title">Lorem, ipsum dolor.</li>
+              <li class="sale_last_price">Lorem, ipsum dolor.</li>
+              <li class="sale_price_area clearfix">
+                <div class="sale_percent">per</div>
+                <div class="sale_price">price</div>
+              </li>
+              <li class="sale_detial">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+            </ul>
+          </a>
         </div>
 
         <div class="sale_item">
-          <div class="sale_img"></div>
-          <ul class="sale_text">
-            <li class="sale_title">Lorem, ipsum dolor.</li>
-            <li class="sale_last_price">Lorem, ipsum dolor.</li>
-            <li class="sale_price_area clearfix">
-              <div class="sale_percent">per</div>
-              <div class="sale_price">price</div>
-            </li>
-            <li class="sale_detial">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-          </ul>
+          <a href="#">
+            <div class="sale_img"></div>
+            <ul class="sale_text">
+              <li class="sale_title">Lorem, ipsum dolor.</li>
+              <li class="sale_last_price">Lorem, ipsum dolor.</li>
+              <li class="sale_price_area clearfix">
+                <div class="sale_percent">per</div>
+                <div class="sale_price">price</div>
+              </li>
+              <li class="sale_detial">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+            </ul>
+          </a>
         </div>
 
         <div class="sale_item">
-          <div class="sale_img"></div>
-          <ul class="sale_text">
-            <li class="sale_title">Lorem, ipsum dolor.</li>
-            <li class="sale_last_price">Lorem, ipsum dolor.</li>
-            <li class="sale_price_area clearfix">
-              <div class="sale_percent">per</div>
-              <div class="sale_price">price</div>
-            </li>
-            <li class="sale_detial">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-          </ul>
+          <a href="#">
+            <div class="sale_img"></div>
+            <ul class="sale_text">
+              <li class="sale_title">Lorem, ipsum dolor.</li>
+              <li class="sale_last_price">Lorem, ipsum dolor.</li>
+              <li class="sale_price_area clearfix">
+                <div class="sale_percent">per</div>
+                <div class="sale_price">price</div>
+              </li>
+              <li class="sale_detial">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+            </ul>
+          </a>
         </div>
 
         <div class="sale_item">
-          <div class="sale_img"></div>
-          <ul class="sale_text">
-            <li class="sale_title">Lorem, ipsum dolor.</li>
-            <li class="sale_last_price">Lorem, ipsum dolor.</li>
-            <li class="sale_price_area clearfix">
-              <div class="sale_percent">per</div>
-              <div class="sale_price">price</div>
-            </li>
-            <li class="sale_detial">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-          </ul>
+          <a href="#">
+            <div class="sale_img"></div>
+            <ul class="sale_text">
+              <li class="sale_title">Lorem, ipsum dolor.</li>
+              <li class="sale_last_price">Lorem, ipsum dolor.</li>
+              <li class="sale_price_area clearfix">
+                <div class="sale_percent">per</div>
+                <div class="sale_price">price</div>
+              </li>
+              <li class="sale_detial">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+            </ul>
+          </a>
         </div>
 
         <div class="sale_item">
-          <div class="sale_img"></div>
-          <ul class="sale_text">
-            <li class="sale_title">Lorem, ipsum dolor.</li>
-            <li class="sale_last_price">Lorem, ipsum dolor.</li>
-            <li class="sale_price_area clearfix">
-              <div class="sale_percent">per</div>
-              <div class="sale_price">price</div>
-            </li>
-            <li class="sale_detial">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-          </ul>
+          <a href="#">
+            <div class="sale_img"></div>
+            <ul class="sale_text">
+              <li class="sale_title">Lorem, ipsum dolor.</li>
+              <li class="sale_last_price">Lorem, ipsum dolor.</li>
+              <li class="sale_price_area clearfix">
+                <div class="sale_percent">per</div>
+                <div class="sale_price">price</div>
+              </li>
+              <li class="sale_detial">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+            </ul>
+          </a>
         </div>
       </div>
 
@@ -362,7 +384,7 @@
     <!-- #magazineBox -->
     <article id="magazineBox">
       <h2 class="blind">매거진</h2>
-      <div class="magazine"></div>
+      <div class="magazine_img"><a href="#"></a></div>
 
     </article> <!-- // #magazineBox-->
 
