[modify] css - main 수정완료

--- a/study_code/a_project/html/main_v1.html
+++ b/study_code/a_project/html/main_v1.html
@@ -87,8 +87,8 @@
       <h2 class="blind">메인 광고</h2>
       <div class="view_area">
         <div class="view_btn">
-          <div class="view_after_btn"><button type="button"></button></div>
-          <div class="view_before_btn"><button type="button">이전내용보기</button></div>
+          <div class="view_after_btn"><button type="button"><span class="blind">다음보기</span></button></div>
+          <div class="view_before_btn"><button type="button"><span class="blind">이전보기</span></button></div>
         </div>
         <div class="view">
           <div class="view_in_wrap">
@@ -165,7 +165,6 @@
       <ul class="benefit_detail_area">
         <li class="benefit">
           <div class="benefit_img benefit_img_coupon">
-            <!-- <img src="../img/wallet.png" alt="지갑 이미지" aria-hidden="true"> -->
           </div>
           <p class="benefit_text">
             회원가입시 
@@ -178,7 +177,6 @@
 
         <li class="benefit">
           <div class="benefit_img benefit_img_review">
-            <!-- <img src="../img/coin.png" alt="동전 이미지" aria-hidden="true"> -->
           </div>
           <p class="benefit_text">
             포토리뷰 작성시 
@@ -189,7 +187,6 @@
 
         <li class="benefit">
           <div class="benefit_img benefit_img_friend">
-            <!-- <img src="../img/hands.png" alt="악수 이미지" aria-hidden="true"> -->
           </div>
           <p class="benefit_text">
             친구 추천시 나와 친구 
@@ -267,11 +264,11 @@
       <div class="awards_title">We're making headlines</div>
       <div class="awards_area">
         <div class="awards_btn">
-          <div class="awards_before_btn"><button type="button">이전보기</button></div>
-          <div class="awards_after_btn"><button type="button">다음보기</button></div>
+          <div class="awards_after_btn"><button type="button"><span class="blind">다음보기</span></button></div>
+          <div class="awards_before_btn"><button type="button"><span class="blind">이전보기</span></button></div>
         </div>
         <ul class="awards_indicator">
-          <li class="awards_circle"><button type="button"></button></li>
+          <li class="awards_circle on"><button type="button"></button></li>
           <li class="awards_circle"><button type="button"></button></li>
           <li class="awards_circle"><button type="button"></button></li>
           <li class="awards_circle"><button type="button"></button></li>
