--- a/study_code/b_step_03/html/a_content.html
+++ b/study_code/b_step_03/html/a_content.html
@@ -52,6 +52,16 @@
       </ul>
     </section>
     <section class="part">
+      <h2><abbr title="ecma-script">ES</abbr>-next version </h2>
+      <p>
+        es2015버전 (es6) 이후의 버전을 통틀어 ES-Next라고 불리우며, ie를 제외한 대부분의 기능은 사용할 수 있지만 그대로 사용하기에는
+        일부 지원하지 않는 경우도 있어, 이를 변환(compile)해주는 역할(babel)을 같이 사용해야한다.
+      </p>
+      <ul>
+        <li><a href="./d_01_esnext_variable.html">js</a></li>
+      </ul>
+    </section>
+    <section class="part">
       <h2>실습</h2>
       <p>
         내가 혼자 실습하는 파일들
