[add] es6 - esNext - 비구조화 할당

--- a/study_code/b_step_03/html/a_content.html
+++ b/study_code/b_step_03/html/a_content.html
@@ -58,7 +58,8 @@
         일부 지원하지 않는 경우도 있어, 이를 변환(compile)해주는 역할(babel)을 같이 사용해야한다.
       </p>
       <ul>
-        <li><a href="./d_01_esnext_variable.html">js</a></li>
+        <li><a href="./d_01_esnext_variable.html">변화된 변수</a></li>
+        <li><a href="./d_02_esnext_destructur.html">비구조화 할당</a></li>
       </ul>
     </section>
     <section class="part">
