[modify] scss - footBox 수정중

--- a/study_code/a_project/html/main_v1.html
+++ b/study_code/a_project/html/main_v1.html
@@ -53,10 +53,15 @@
           <h3 class="blind">사용자 네비게이션</h3>
           <ul class="unb_btn">
             <li class="unb_language" tabindex="0">
-              <div class="language_img" tabindex="0"></div>
-              <a href="#"><span>한국어</span></a>
-              <a href="#"><span>ENGLISH</span></a>
-              <a href="#"><span>中國語</span></a>
+              <!-- <div class="language_img" tabindex="0"></div> -->
+              <ul class="unb_lauguage_area">
+                <li><a href="#">한국어</a></li>
+                <li><a href="#">ENGLISH</a></li>
+                <li><a href="#">中國語</a></li>
+              </ul>
+              <!-- <div><a href="#">한국어</a></div>
+              <div><a href="#">ENGLISH</a></div>
+              <div><a href="#">中國語</a></div> -->
             </li>
             <li class="unb_sign"><a href="#">회원가입</a></li>
             <li class="unb_login"><a href="#">로그인</a></li>
@@ -95,6 +100,9 @@
         <button type="button" class="hand_cart"></button>
         <button type="button" class="hand_menu"></button>
       </nav>
+      <!-- <div class="side_menu">
+
+      </div> -->
       
     </header> <!-- // #headBox-->
 
@@ -408,7 +416,6 @@
       <div class="foot_top_area">
         <h2>
           <span class="blind">큐브미 정보</span>
-          <img src="../img/footer-logo-text.svg" alt="큐브미" aria-hidden="true">
         </h2>
         <div class="foot_top_btn">
           <div class="foot_products"><a href="#">Products</a></div>
