--- a/study_code/b_step_03/html/d_05_promise.html
+++ b/study_code/b_step_03/html/d_05_promise.html
@@ -5,9 +5,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <style>
-    #calBox div { margin-bottom: 20px;}
-  </style>
 </head>
 <body>
   <!-- layout -->
@@ -18,30 +15,28 @@
       <input type="text" id="num" value="" />
       <button type="button">값 확인</button>
     </article>
-
-    <article id="textBox">
-      <h2>국/영/수 1~5 점수 계산</h2>
-      <p>국/영/수 1~5 점수 계산하여 총점에서 +5점 이후 x5를 하여 결과를 도출</p>
+    <article id="testBox">
+      <h2>국/영/수 1~5점수 계산</h2>
+      <p>국/영/수 1~5점수 계산 하여 총점에서 + 5점 이후 * 5를 하여 결과를 도출</p> 
       <form action="" method="post">
         <fieldset>
           <legend>점수계산</legend>
           <ul>
             <li>
-              <label for="korean">국어</label>
-              <input type="text" id="koren" value=" /">
+              <label for="korean">국어</label> 
+              <input type="text" id="korean" value="" />
             </li>
             <li>
-              <label for="english">영어</label>
-              <input type="text" id="english" value=" /">
+              <label for="english">영어</label> 
+              <input type="text" id="english" value="" />
             </li>
             <li>
-              <label for="math">수학</label>
-              <input type="text" id="math" value=" /">
+              <label for="math">수학</label> 
+              <input type="text" id="math" value="" />
             </li>
             <li><button type="button">결과</button></li>
-            
           </ul>
-          <p class="result">총합: <span></span></p>
+          <p class="result">총합 : <span></span></p>
         </fieldset>
       </form>
     </article>
