[add] footBox 1280 이상 디자인

--- a/study_code/a_project/html/main_v1.html
+++ b/study_code/a_project/html/main_v1.html
@@ -433,6 +433,7 @@
           <li class="foot_personal"><a href="#">개인정보처리방침</a></li>
           <li class="foot_agreement"><a href="#">이용약관</a></li>
         </ul>
+
         <address class="foot_info">
           <p>(주)아모레퍼시픽 &#124; 대표이사 : 안세홍 &#124; 사업자등록번호 : 106-86-43373 &#124; 사업자정보 확인</p>
           <p>서울특별시 용산구 한강대로 100 &#124; 080-033-5454(쇼핑문의) &#124; 080-023-5454(제품문의)</p>
@@ -449,7 +450,7 @@
             <a href="#"></a>
           </li>
         </ul>
-      </div>
+      </div> <!-- // .foot_main_area -->
 
     </footer> <!-- // #footBox-->
 
