[modify] footBox 반응형 - 650px이하 오류

--- a/study_code/a_project/html/main_v1.html
+++ b/study_code/a_project/html/main_v1.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- main_v1.html -->
-<html lang="ko-KR" class="no-js">
+<html lang="ko-KR">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -439,7 +439,7 @@
           <p>서울특별시 용산구 한강대로 100 &#124; 080-033-5454(쇼핑문의) &#124; 080-023-5454(제품문의)</p>
           <p>통신판매업신고번호 : 2017-서울용산-1308호 &#124; 건강기능식품판매업 영업신고증 제8호</p>
           <p>전자메일주소 : cubeme_mall@cubeme.co.kr &#124; 호스팅제공자 : (주)아모레퍼시픽</p>
-          <p>Copyright 2020 CUBE ME. All rights reserved.</p>
+          <p class="copyright">Copyright 2020 CUBE ME. All rights reserved.</p>
         </address>
 
         <ul class="foot_bottom_btn">
