--- a/study_code/b_step_03/html/a_content.html
+++ b/study_code/b_step_03/html/a_content.html
@@ -63,6 +63,7 @@
         <li><a href="./d_02_esnext_arrowFunction.html">화살표 함수</a></li>
         <li><a href="./d_04_fetch.html">외부 문서 불러오기</a></li>
         <li><a href="./d_05_promise.html">콜백의 대안 - promise</a></li>
+        <li><a href="./d_06_promise_polyfill.html">promise 변환 문제 처리</a></li>
       </ul>
     </section>
     <section class="part">
