[add] promise, async 기능 정의

--- a/study_code/b_step_03/html/d_08_for_of.html
+++ b/study_code/b_step_03/html/d_08_for_of.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- d_06_promise_polyfill.html -->
+<!-- d_08_for_of.html -->
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -8,11 +8,7 @@
   <title>Document</title>
 </head>
 <body>
-  <!-- layout -->
   <h1><a href="./a_content.html">js</a></h1>
-  <!-- script -->
-  <script src="https://polyfill.io/v3/polyfill.min.js?features=Promise"></script>
-  <!-- <script src="../js/src/d_06_promise_polyfill.js"></script> -->
-  <script src="../dist/src/d_06_promise_polyfill.js"></script>
+  <script src="../dist/src/d_08_for_of.js"></script>
 </body>
 </html>
