--- a/study_code/b_step_03/html/a_content.html
+++ b/study_code/b_step_03/html/a_content.html
@@ -64,6 +64,8 @@
         <li><a href="./d_04_fetch.html">외부 문서 불러오기</a></li>
         <li><a href="./d_05_promise.html">콜백의 대안 - promise</a></li>
         <li><a href="./d_06_promise_polyfill.html">promise 변환 문제 처리</a></li>
+        <li><a href="./d_07_async.html">async await</a></li>
+        <li><a href="./d_08_for_of.html">for-of</a></li>
       </ul>
     </section>
     <section class="part">
