--- a/study_code/b_step_03/html/a_content.html
+++ b/study_code/b_step_03/html/a_content.html
@@ -67,6 +67,7 @@
         <li><a href="./d_07_async.html">async await</a></li>
         <li><a href="./d_08_for_of.html">for-of</a></li>
         <li><a href="./d_09_import.html">import file</a></li>
+        <li><a href="./d_10_get_json.html">json data import - 구글 데이터 불러오기</a></li>
       </ul>
     </section>
     <section class="part">
