[add] slide_area.js - 광고슬라이드 기능 이전 class 제거 후 다음 요소에 적용

--- a/study_code/b_step_03/html/a_content.html
+++ b/study_code/b_step_03/html/a_content.html
@@ -29,6 +29,7 @@
         <li><a href="./b_16_js_remind_02.html">javascript - es5 - 기초 재정리 2</a></li>
       </ul>
     </section>
+
     <section class="part">
       <h2><abbr title="Document Object Model">DOM</abbr></h2>
       <p>
@@ -51,6 +52,7 @@
         <li><a href="./c_12_dom_list_modal.html">리스트 생성 및 modal 처리</a></li>
       </ul>
     </section>
+
     <section class="part">
       <h2><abbr title="ecma-script">ES</abbr>-next version </h2>
       <p>
@@ -70,6 +72,17 @@
         <li><a href="./d_10_get_json.html">json data import - 구글 데이터 불러오기</a></li>
       </ul>
     </section>
+
+    <section class="part">
+      <h2>실습</h2>
+      <p>
+        선생님 파일
+      </p>
+      <ul>
+        <li><a href="./e_01_slide_area.html">광고영역 실습 결과</a></li>
+      </ul>
+    </section>
+
     <section class="part">
       <h2>실습</h2>
       <p>
@@ -77,6 +90,7 @@
       </p>
       <ul>
         <li><a href="./z_01_practice_event_modal.html">선생님 figma파일 event_design</a></li>
+        <li><a href="./z_02_practice_slide_area.html">광고영역 실습</a></li>
       </ul>
     </section>
   </div>
