--- a/study_code/b_step_03/html/e_01_slide_area.html
+++ b/study_code/b_step_03/html/e_01_slide_area.html
@@ -17,47 +17,20 @@
 <body>
   <!-- layout -->
   <div id="wrap">
-    <header id="headBox">
-      <h1><a href="./a_content.html">웹</a></h1>
-    </header>
+    <!-- 
+      <header id="headBox">
+        <h1><a href="./a_content.html">웹</a></h1>
+      </header> 
+    -->
+
     <section id="viewBox">
-      <h2>광고 만들기</h2>
-      <div class="part slide_01">
-        <h3 class="blind">광고이미지변환1</h3>
-        <div class="view_area">
-
-          <div class="view_btn blind_wrap">
-            <button type="button" class="next"> ▶<span>다음버튼</span></button>
-            <button type="button" class="prev">
-              ◀<span>이전버튼</span></button>
-          </div>
-
-          <div class="indicator">
-            <ul>
-              <li><a href="#"><span>광고 요약 설명 01</span></a></li>
-              <li><a href="#"><span>광고 요약 설명 02</span></a></li>
-              <li><a href="#"><span>광고 요약 설명 03</span></a></li>
-              <li><a href="#"><span>광고 요약 설명 04</span></a></li>
-            </ul>
-          </div>
-
-          <div class="view_content">
-            <ul>
-              <li class="on">광고 1</li>
-              <li>광고 2</li>
-              <li>광고 3</li>
-              <li>광고 4</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
     </section>
 
 
   </div>
 
   <!-- script -->
+  <script src="../dist/src/e_01_importHtml.js"></script>
   <script src="../dist/src/e_01_slide_area.js"></script>
 </body>
 </html>
