[add] main #bestBox pc버전 고정 버전

--- a/study_code/a_project/html/main_v1.html
+++ b/study_code/a_project/html/main_v1.html
@@ -124,7 +124,7 @@
               <div class="view_content view_content_05"><a href="#">05</a></div>
           </div>
         </div>
-        <div class="view_num">1/5</div>
+        <div class="view_num"><span>1</span>&sol;<span>5</span></div>
       </div>
       <ul class="side_view_area">
         <li class="side_view"><a href="#"></a></li>
@@ -145,6 +145,36 @@
         <div class="title_all"><a href="#">모두보기(<span class="best_length">14</span>)</a></div>
       </div>
       <ul class="best_area">
+        <li class="best_item">
+          <a href="#">
+            <div class="best_img"></div>
+            <dl class="best_text">
+              <dt class="text_title">Lorem.</dt>
+              <dd class="text_price">Lorem, ipsum.</dd>
+              <dd class="text_detail">Lorem ipsum dolor sit amet.</dd>
+            </dl>
+          </a>
+        </li>
+        <li class="best_item">
+          <a href="#">
+            <div class="best_img"></div>
+            <dl class="best_text">
+              <dt class="text_title">Lorem.</dt>
+              <dd class="text_price">Lorem, ipsum.</dd>
+              <dd class="text_detail">Lorem ipsum dolor sit amet.</dd>
+            </dl>
+          </a>
+        </li>
+        <li class="best_item">
+          <a href="#">
+            <div class="best_img"></div>
+            <dl class="best_text">
+              <dt class="text_title">Lorem.</dt>
+              <dd class="text_price">Lorem, ipsum.</dd>
+              <dd class="text_detail">Lorem ipsum dolor sit amet.</dd>
+            </dl>
+          </a>
+        </li>
         <li class="best_item">
           <a href="#">
             <div class="best_img"></div>
