[add] best, benefit 반응형

--- a/study_code/a_project/html/main_v1.html
+++ b/study_code/a_project/html/main_v1.html
@@ -205,6 +205,36 @@
             </dl>
           </a>
         </li>
+        <li class="best_item">
+          <a href="#">
+            <div class="best_img"></div>
+            <dl class="best_text">
+              <dt class="text_title">Lorem.</dt>
+              <dd class="text_price">Lorem, ipsum.</dd>
+              <dd class="text_detail">Lorem ipsum dolor sit amet.</dd>
+            </dl>
+          </a>
+        </li>
+        <li class="best_item">
+          <a href="#">
+            <div class="best_img"></div>
+            <dl class="best_text">
+              <dt class="text_title">Lorem.</dt>
+              <dd class="text_price">Lorem, ipsum.</dd>
+              <dd class="text_detail">Lorem ipsum dolor sit amet.</dd>
+            </dl>
+          </a>
+        </li>
+        <li class="best_item">
+          <a href="#">
+            <div class="best_img"></div>
+            <dl class="best_text">
+              <dt class="text_title">Lorem.</dt>
+              <dd class="text_price">Lorem, ipsum.</dd>
+              <dd class="text_detail">Lorem ipsum dolor sit amet.</dd>
+            </dl>
+          </a>
+        </li>
       </ul>
 
     </section> <!-- // #bestBox-->
@@ -224,7 +254,7 @@
           <p class="benefit_text">
             회원가입시 
           <em class="benefit_bold">총 5,000원 상당 </em>
-          혜택 및 
+          <br />혜택 및 
           <em class="benefit_bold">100원 쿠폰 </em>
           증정
         </p>
@@ -244,7 +274,7 @@
           <div class="benefit_img benefit_img_friend">
           </div>
           <p class="benefit_text">
-            친구 추천시 나와 친구 
+            친구 추천시 나와 친구 <br />
             <em class="benefit_bold">5,000P </em>
             지급
           </p>
