[add] 목차 업데이트

--- a/study_code/b_step_03/html/a_content.html
+++ b/study_code/b_step_03/html/a_content.html
@@ -91,6 +91,7 @@
       <ul>
         <li><a href="./z_01_practice_event_modal.html">선생님 figma파일 event_design</a></li>
         <li><a href="./z_02_practice_slide_area.html">광고영역 실습</a></li>
+        <li><a href="./z_03_practice_slide_area2.html">광고영역 실습-fadein/fadeout</a></li>
       </ul>
     </section>
   </div>
