[add] slide_area - 코드불러오기 및 내용 일부 수정 및 replace

--- a/study_code/b_step_03/html/e_01_slide_area.html
+++ b/study_code/b_step_03/html/e_01_slide_area.html
@@ -26,11 +26,11 @@
     <section id="viewBox">
     </section>
 
-
+    <section id="viewBox2"></section>
   </div>
 
   <!-- script -->
   <script src="../dist/src/e_01_importHtml.js"></script>
-  <script src="../dist/src/e_01_slide_area.js"></script>
+  <!-- <script src="../dist/src/e_01_slide_area.js"></script> -->
 </body>
 </html>
