[add/modify] main-event 반응형 / main 전체 padding 조절

--- a/study_code/a_project/html/main_v1.html
+++ b/study_code/a_project/html/main_v1.html
@@ -318,6 +318,26 @@
             </dl>
           </a>
         </li>
+        
+        <li class="event">
+          <a href="#">
+            <div class="event_img"></div>
+            <dl class="event_text">
+              <dt class="event_title">Lorem.</dt>
+              <dd class="event_detial">Lorem ipsum dolor sit.</dd>
+            </dl>
+          </a>
+        </li>
+
+        <li class="event">
+          <a href="#">
+            <div class="event_img"></div>
+            <dl class="event_text">
+              <dt class="event_title">Lorem.</dt>
+              <dd class="event_detial">Lorem ipsum dolor sit.</dd>
+            </dl>
+          </a>
+        </li>
 
         <li class="event">
           <a href="#">
