[add] main - awards 반응형

--- a/study_code/a_project/html/main_v1.html
+++ b/study_code/a_project/html/main_v1.html
@@ -318,7 +318,7 @@
             </dl>
           </a>
         </li>
-        
+
         <li class="event">
           <a href="#">
             <div class="event_img"></div>
@@ -380,17 +380,16 @@
           <li class="awards_circle"><button type="button"></button></li>
         </ul>
         <ul class="awards_main">
-          <li class="awards_before">
-            <div class="awards_side_black"></div>
-          </li>
           <li class="awards"></li>
           <li class="awards"></li>
           <li class="awards"></li>
-          <li class="awards_after">
-            <div class="awards_side_black"></div>
-          </li>
+          <li class="awards"></li>
+          <li class="awards"></li>
+          <li class="awards"></li>
+          <li class="awards"></li>
+          <li class="awards"></li>
         </ul>
-      </div>
+      </div> <!-- // .awards_area -->
 
     </aside> <!-- // #awardsBox-->
 
