--- a/study_code/a_project/html/event_v1.html
+++ b/study_code/a_project/html/event_v1.html
@@ -30,7 +30,7 @@
     <!-- #headBox -->
     <header id="headBox">
       <h1>
-        <a href="#">
+        <a href="./main_v1.html">
           <span class="blind">큐브미</span>
           <!-- <img class="logo" src="../img/logo-cubeme-text.png" alt="큐브미" aria-hidden="true"> -->
         </a>
