[modify] 반응형 오류 수정

--- a/study_code/a_project/html/main_v1.html
+++ b/study_code/a_project/html/main_v1.html
@@ -31,9 +31,8 @@
     <!-- #headBox -->
     <header id="headBox">
       <h1>
-        <a href="#">
+        <a href="./main_v1.html">
           <span class="blind">큐브미</span>
-          <!-- <img class="logo" src="../img/logo-cubeme-text.png" alt="큐브미" aria-hidden="true"> -->
         </a>
       </h1>
       <nav id="navigation">
@@ -310,7 +309,7 @@
       </div>
       <ul class="event_area">
         <li class="event">
-          <a href="#">
+          <a href="./event_v1.html">
             <div class="event_img"></div>
             <dl class="event_text">
               <dt class="event_title">Lorem.</dt>
@@ -320,7 +319,7 @@
         </li>
 
         <li class="event">
-          <a href="#">
+          <a href="./event_v1.html">
             <div class="event_img"></div>
             <dl class="event_text">
               <dt class="event_title">Lorem.</dt>
@@ -330,7 +329,7 @@
         </li>
 
         <li class="event">
-          <a href="#">
+          <a href="./event_v1.html">
             <div class="event_img"></div>
             <dl class="event_text">
               <dt class="event_title">Lorem.</dt>
@@ -340,7 +339,7 @@
         </li>
 
         <li class="event">
-          <a href="#">
+          <a href="./event_v1.html">
             <div class="event_img"></div>
             <dl class="event_text">
               <dt class="event_title">Lorem.</dt>
@@ -350,7 +349,7 @@
         </li>
 
         <li class="event">
-          <a href="#">
+          <a href="./event_v1.html">
             <div class="event_img"></div>
             <dl class="event_text">
               <dt class="event_title">Lorem.</dt>
@@ -380,10 +379,10 @@
           <li class="awards_circle"><button type="button"></button></li>
         </ul>
         <ul class="awards_main">
+          <li class="awards black"></li>
           <li class="awards"></li>
           <li class="awards"></li>
-          <li class="awards"></li>
-          <li class="awards"></li>
+          <li class="awards black"></li>
           <li class="awards"></li>
           <li class="awards"></li>
           <li class="awards"></li>
