[add] 필요 이미지

--- a/study_code/a_project/html/main_v1.html
+++ b/study_code/a_project/html/main_v1.html
@@ -116,19 +116,19 @@
         </div>
         <div class="view">
           <div class="view_in_wrap">
-              <div class="view_content view_content_01"><a href="#">01</a></div>
-              <div class="view_content view_content_02"><a href="#">02</a></div>
-              <div class="view_content view_content_03"><a href="#">03</a></div>
-              <div class="view_content view_content_04"><a href="#">04</a></div>
-              <div class="view_content view_content_05"><a href="#">05</a></div>
+              <div class="view_content view_content_01"><a href="#"></a></div>
+              <div class="view_content view_content_02"><a href="#"></a></div>
+              <div class="view_content view_content_03"><a href="#"></a></div>
+              <div class="view_content view_content_04"><a href="#"></a></div>
+              <div class="view_content view_content_05"><a href="#"></a></div>
           </div>
         </div>
         <div class="view_num"><span>1</span>&sol;<span>5</span></div>
       </div>
       <ul class="side_view_area">
-        <li class="side_view"><a href="#"></a></li>
-        <li class="side_view"><a href="#"></a></li>
-        <li class="side_view"><a href="#"></a></li>
+        <li class="side_view"><a href="#">event</a></li>
+        <li class="side_view"><a href="#">magazine</a></li>
+        <li class="side_view"><a href="#">cubeme</a></li>
       </ul>
 
     </section> <!-- // #viewBox-->
