[add] slide_area.js - 슬라이드 광고 생성을 위한 html 문서 불러오기

--- a/study_code/b_step_03/html/a_content.html
+++ b/study_code/b_step_03/html/a_content.html
@@ -74,12 +74,13 @@
     </section>
 
     <section class="part">
-      <h2>실습</h2>
+      <h2>DOM 구성 2</h2>
       <p>
         선생님 파일
       </p>
       <ul>
-        <li><a href="./e_01_slide_area.html">광고영역 실습 결과</a></li>
+        <li><a href="./e_01_slide_area.html">화면 변화 광고 슬라이드 만들기</a></li>
+        <li><a href="./e_02_slide_area.html">가로형 슬라이드 만들기</a></li>
       </ul>
     </section>
 
