--- a/study_code/a_project/html/main_v1.html
+++ b/study_code/a_project/html/main_v1.html
@@ -367,27 +367,29 @@
       <h2 class="blind">awards</h2>
       <div class="awards_title">We're making headlines</div>
       <div class="awards_area">
-        <div class="awards_btn">
-          <div class="awards_after_btn"><button type="button"><span class="blind">다음보기</span></button></div>
-          <div class="awards_before_btn"><button type="button"><span class="blind">이전보기</span></button></div>
+        <div class="awards_part">
+          <div class="awards_btn">
+            <div class="awards_after_btn"><button type="button"><span class="blind">다음보기</span></button></div>
+            <div class="awards_before_btn"><button type="button"><span class="blind">이전보기</span></button></div>
+          </div>
+          <ul class="awards_indicator">
+            <li class="awards_circle on"><button type="button"></button></li>
+            <li class="awards_circle"><button type="button"></button></li>
+            <li class="awards_circle"><button type="button"></button></li>
+            <li class="awards_circle"><button type="button"></button></li>
+            <li class="awards_circle"><button type="button"></button></li>
+          </ul>
+          <ul class="awards_main">
+            <li class="awards black"></li>
+            <li class="awards"></li>
+            <li class="awards"></li>
+            <li class="awards black"></li>
+            <li class="awards"></li>
+            <li class="awards"></li>
+            <li class="awards"></li>
+            <li class="awards"></li>
+          </ul>
         </div>
-        <ul class="awards_indicator">
-          <li class="awards_circle on"><button type="button"></button></li>
-          <li class="awards_circle"><button type="button"></button></li>
-          <li class="awards_circle"><button type="button"></button></li>
-          <li class="awards_circle"><button type="button"></button></li>
-          <li class="awards_circle"><button type="button"></button></li>
-        </ul>
-        <ul class="awards_main">
-          <li class="awards black"></li>
-          <li class="awards"></li>
-          <li class="awards"></li>
-          <li class="awards black"></li>
-          <li class="awards"></li>
-          <li class="awards"></li>
-          <li class="awards"></li>
-          <li class="awards"></li>
-        </ul>
       </div> <!-- // .awards_area -->
 
     </aside> <!-- // #awardsBox-->
