--- a/study_code/b_step_03/html/a_content.html
+++ b/study_code/b_step_03/html/a_content.html
@@ -71,6 +71,7 @@
         <li><a href="./d_09_import.html">import file</a></li>
         <li><a href="./d_10_get_json.html">json data import - 구글 데이터 불러오기</a></li>
         <li><a href="./d_11_sync_vs_Async.html">동기 비동기</a></li>
+        <li><a href="./d_12_rwd.html"> </a></li>
       </ul>
     </section>
 
